# fastapi-docker-temp

./: .env  .env.staging  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  start.sh  登录鉴权流程说明.md
app/: backend_pre_start.py  initial_data.py  log_info.py  main.py
app/alembic/: alembic的介绍.md  env.py
app/alembic/versions/: 269508d2751a_用户添加字段.py  357b39fd995a_描述.py  3a2a330288e4_.py  3dc208d75f87_user表.py  442ba1518712_create_tables.py  63e439b8106e_增加is_superuser字段.py  68a872d5103d_增加shortid.py  7c3eb97206f5_描述.py  95567daf8ec4_增加起卦记录表.py  a32039f718ee_增加起卦记录表.py  d533eed370d5_描述.py  d596ab360d77_起卦标题不唯一.py  e23a5f819f25_用户添加字段.py
app/api/: crud.py  depends.py  main.py
app/api/routes/: ai.py  divination.py  login.py  todo.py  token.md  user.py
app/core/: config.py  db.py  jwt令牌机制说明.md  login_secure.py  security.py
app/crud/: DivinationRecordCRUD.py  SMSCodeRecordCRUD.py  TodoCRUD.py  UserCRUD.py  smscoderecord.py
app/models/: table.py
app/models/BaseModels/: SMSCodeRecordBase.py  Token.py  User.py
app/models/base_models/: Base.py  DivinationRecordBase.py  SMSCodeRecordBase.py  TodoBase.py  Token.py  UserBase.py
app/models/public_models/: In.py  Out.py
app/tool/: random.py
